--- a/ScreenDimmer/AboutForm.resx
+++ b/ScreenDimmer/AboutForm.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="MainLabel.Text" xml:space="preserve">
     <value>This software is free to use and distribute for non-commercial use according to the GPL 3.0 license.
 
 Please donate to help keep this program free and fund further development of this program.
