changed window sizes for SettingsForm and AboutForm, edited text on about form

--- a/ScreenDimmer/AboutForm.resx
+++ b/ScreenDimmer/AboutForm.resx
@@ -120,7 +120,7 @@
   <data name="MainLabel.Text" xml:space="preserve">
     <value>This software is free to use and distribute for non-commercial use according to the GPL 3.0 license.
 
-Please donate to help keep this program free and fund further development of this program.
+Please consider donating to support further development of this program :D
 
 Libraries used:
 - SolarCalculator by Daniel M. Porrey
